Code Modernization and Cleanup.